# personaltesting

./: README.md
src/add_box_pkg/: CMakeLists.txt  aa.py  package.xml
src/add_box_pkg/src/: add_box.cpp  move_robot.cpp  move_robot_2.cpp
src/cobot_moveit_config/: .setup_assistant  package.xml
src/cobot_moveit_config/config/: cobot.srdf  fake_controllers.yaml  gazebo_cobot.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml
src/cobot_moveit_config/launch/: demo.launch  gazebo.launch  planning_context.launch  ros_controllers.launch
src/cobot_test/: CMakeLists.txt  package.xml
src/cobot_test/src/: cobot_gui.cpp  cobot_launcher_gui.cpp  gripper_control_node.cpp  gripper_visual_test.cpp  pick_place_cobot.cpp  simple_moveit_test.cpp  test1_pick_place.cpp  test2.cpp
